Sat Feb 18 15:35:06 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Actually, the windows special case code for PHP
	  should *NOT* be active for cygwin too!

Sat Feb 18 15:34:10 GMT 2006  Olly Betts <olly@survex.com>

	* php/util.i: Fix so that generated code compiles with ZTS-enabled
	  PHP (which is the default on Windows).

Fri Feb 17 14:10:08 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,guile/Makefile.am,
	  java/native/Makefile.am,php/Makefile.am,python/Makefile.am,
	  tcl8/Makefile.am: If we're overriding MACOSX_DEPLOYMENT_TARGET
	  then override it for commands run from "make" too.
	* configure.ac: The windows special case code for PHP should be
	  active for cygwin too.

Thu Feb 16 00:11:00 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.3.
	* php/Makefile.am: Missing change for trying to enable PHP bindings
	  to build out of the box on cygwin.

Wed Feb 15 23:18:22 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Add missing ";;" on the last alternative in some
	  case statements.
	* configure.ac: Try to enable PHP bindings to build out of the
	  box on cygwin (needs testing).

Wed Feb 15 21:02:42 GMT 2006  Olly Betts <olly@survex.com>

	* java/README: Updated the java TODO list.

Tue Feb 14 17:13:36 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,guile/Makefile.am,
	  java/native/Makefile.am,php/Makefile.am,python/Makefile.am,
	  tcl8/Makefile.am: Only pass -no-undefined on platforms where it
	  is required in order to link a shared library at all (it causes
	  problems on MacOS X in some cases).

Tue Feb 14 14:45:34 GMT 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: Remove stray print statement left over from
	  debugging.

Tue Feb 14 14:37:15 GMT 2006  Olly Betts <olly@survex.com>

	* xapian.i: zend_throw_exception takes a non-const char * as the
	  message to throw.  Presumably it doesn't modify it, but there's